# Changelog

## 2020-03-31 20:25

- Added petition for the German Bundestag (https://epetitionen.bundestag.de/petitionen/_2020/_03/_14/Petition_108191.nc.html)

## 2020-03-26 10:02

- Added daily/hourly graphs and javascript to switch between them

## 2020-03-21 19:22

- Added last 24 hours and last hour new signatures
- Added more data by manual input (data source was https://www.archiv-grundeinkommen.de/)

## 2020-03-21 15:25

- added youmove petition
- added dark theme
- made crawler inside node.js because crontab didn't work (working every 5 minutes)

## 2020-03-21 11:06

- Crawling mein-grundeinkommen.de
- Crawling change.org for 6 months petition
- Basic website with chart.js graph

## 2020-03-20 16:00

- Setup project structure.
