@@ -15,6 +15,7 @@ const pLimit = require('p-limit')
 moment.tz.setDefault('UTC')
 
 const models = require('../database/models')
+const pnotice = require('pushnotice')(`${config.slug}:crawler:meinBge`, { env: config.env, chat: config.pushnotice.chat, debug: true, disabled: config.pushnotice.disabled })
 
 const urls = [
   {
@@ -33,9 +34,15 @@ const fetchModel = async (key, url) => {
   const dateNow = moment().startOf('day')
   const timeNow = moment().format('HH:mm:ss')
 
-  const $selection = $('#frontpage-scroll-destination span.h0')
+  const $selection = $('.container-fluid.fullbleed-sm.background-color--background .col-md-6 .h0')
+  if (!$selection) {
+    pnotice(`${key} — could not find web site element with values for stats`)
+    log(`Crawler ended early for ${key}`)
+    return;
+  }
   let numberDonors
   let numberGrundeinkommen
+
   await $selection.map(async function (i, el) {
     const number = parseInt($(el).html().replace('.', ''))
     switch (i) {
@@ -50,20 +57,30 @@ const fetchModel = async (key, url) => {
     }
   })
 
-  await models.ValuesInt.create({
-    key: 'meinbge-de-donors',
-    date: dateNow,
-    time: timeNow,
-    value: numberDonors
-  })
-  await models.ValuesInt.create({
-    key: 'meinbge-de-grundeinkommen',
-    date: dateNow,
-    time: timeNow,
-    value: numberGrundeinkommen
-  })
+  if (numberDonors) {
+    await models.ValuesInt.create({
+      key: 'meinbge-de-donors',
+      date: dateNow,
+      time: timeNow,
+      value: numberDonors
+    })
+  } else {
+    log(`No valid value for donors for ${key}`)
+    pnotice(`${key} — Crawler could not find value for numberDonors`)
+  }
+  if (numberGrundeinkommen) {
+    await models.ValuesInt.create({
+      key: 'meinbge-de-grundeinkommen',
+      date: dateNow,
+      time: timeNow,
+      value: numberGrundeinkommen
+    })
 
-  log(`Crawled and put it in Database ${key}`)
+    log(`Crawled and put it in Database ${key}`)
+  } else {
+    log(`No valid value for grundeinkommen count for ${key}`)
+    pnotice(`${key} — Crawler could not find value for numberGrundeinkommen`)
+  }
 }
 
 const start = async () => {
